# mokuba

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: audit.yml  ci.yml  release.yml  rust.yml
lib/mcore/: Cargo.toml
lib/mcore/src/: algebra.rs  codec.rs  executable.rs  lib.rs  model.rs  mstd.rs  parser.rs
lib/mcore/src/algebra/: laws.rs  mod.rs  monoid.rs  semigroup.rs
lib/mcore/src/mstd/: cmd.rs  codec.rs  error.rs  mod.rs  param.rs
lib/mcore/src/mstd/cmds/: mod.rs
lib/mcore/src/syntax/: mod.rs  option.rs  printer.rs  tuple.rs
lib/mmacro/: Cargo.toml
lib/mmacro/src/: lib.rs
lib/mmacro/tests/: integration_test.rs
src/: bin.rs  lib.rs
src/command/: mod.rs
src/core/: mod.rs  model.rs  mstd.rs
